# buswatch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  rabbitmq.toml
.github/workflows/: ci.yml  coverage.yml  release.yml
buswatch-adapters/: Cargo.toml  README.md
buswatch-adapters/src/: error.rs  kafka.rs  lib.rs  nats.rs  rabbitmq.rs
buswatch-sdk/: Cargo.toml  README.md
buswatch-sdk/benches/: concurrent_throughput.rs  record_operations.rs  serialization.rs  snapshot_collection.rs
buswatch-sdk/src/: handle.rs  instrumentor.rs  lib.rs  otel.rs  output.rs  prometheus.rs  state.rs
buswatch-tui/: Cargo.toml  README.md
buswatch-tui/examples/: channel_source.rs  file_source.rs  stream_source.rs
buswatch-tui/src/: app.rs  events.rs  lib.rs  subscribe.rs
buswatch-tui/src/data/: duration.rs  flow.rs  history.rs  monitor.rs
buswatch-tui/src/source/: channel.rs  file.rs  mod.rs  stream.rs
buswatch-tui/src/ui/: bottleneck.rs  common.rs  mod.rs  summary.rs  theme.rs
buswatch-types/: Cargo.toml  README.md
buswatch-types/schema/: snapshot.schema.json
buswatch-types/src/: duration.rs  lib.rs  metrics.rs  snapshot.rs  version.rs
examples/: channel_source.rs  file_source.rs  stream_source.rs
src/: app.rs  events.rs  lib.rs  main.rs  subscribe.rs
src/data/: duration.rs  flow.rs  history.rs  mod.rs  monitor.rs
src/source/: channel.rs  file.rs  mod.rs  snapshot.rs  stream.rs
src/subscribe/: message.rs  mod.rs  subscriber.rs
src/ui/: bottleneck.rs  common.rs  detail.rs  flow.rs  summary.rs  theme.rs
