[package]
name = "buswatch"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Matthew Hounslow"]
description = "Diagnostic TUI for monitoring Caryatid message bus activity"
license = "Apache-2.0"
repository = "https://github.com/lowhung/buswatch"
documentation = "https://docs.rs/buswatch"
readme = "README.md"
keywords = ["caryatid", "monitoring", "tui", "diagnostics", "message-bus"]
categories = ["command-line-utilities", "development-tools::debugging"]
exclude = [".github/", ".gitignore"]

[lib]
name = "buswatch"
path = "src/lib.rs"

[[bin]]
name = "buswatch"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
terminal-light = "1.4"
config = "0.15"

# RabbitMQ subscription (optional feature)
lapin = { version = "2", optional = true }
futures-util = { version = "0.3", optional = true }
minicbor-serde = { version = "0.6", features = ["alloc"], optional = true }

[features]
default = []
subscribe = ["lapin", "futures-util", "minicbor-serde"]

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
