[workspace]
members = ["buswatch-tui", "buswatch-types", "buswatch-sdk", "buswatch-adapters"]
resolver = "2"
default-members = ["buswatch-tui"]

[package]
name = "buswatch"
version = "0.2.6"
edition = "2021"
rust-version = "1.85"
authors = ["Matthew Hounslow"]
description = "Diagnostic TUI for monitoring Caryatid message bus activity"
license = "Apache-2.0"
repository = "https://github.com/lowhung/buswatch"
documentation = "https://docs.rs/buswatch"
readme = "README.md"
keywords = ["caryatid", "monitoring", "tui", "diagnostics", "message-bus"]
categories = ["command-line-utilities", "development-tools::debugging"]
exclude = [".github/", ".gitignore"]

[lib]
name = "buswatch"
path = "src/lib.rs"

[dependencies]
buswatch-tui = { version = "0.1.1", path = "buswatch-tui" }
buswatch-types = { version = "0.1.0", path = "buswatch-types", features = ["serde"] }

[features]
default = ["subscribe"]
subscribe = ["buswatch-tui/subscribe"]
