[package]
name = "buswatch-adapters"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Matthew Hounslow"]
description = "Pre-built adapters for collecting metrics from popular message buses"
license = "Apache-2.0"
repository = "https://github.com/lowhung/buswatch"
documentation = "https://docs.rs/buswatch-adapters"
readme = "README.md"
keywords = ["message-bus", "observability", "monitoring", "rabbitmq", "kafka"]
categories = ["development-tools::debugging", "development-tools::profiling"]

[features]
default = []
rabbitmq = ["dep:reqwest", "dep:tokio"]
kafka = ["dep:rdkafka", "dep:tokio"]
nats = ["dep:async-nats", "dep:tokio", "dep:futures-util"]
all = ["rabbitmq", "kafka", "nats"]

[dependencies]
buswatch-types = { version = "0.1.0", path = "../buswatch-types", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# RabbitMQ (uses management HTTP API)
reqwest = { version = "0.12", features = ["json"], optional = true }

# Kafka
rdkafka = { version = "0.37", features = ["cmake-build"], optional = true }

# NATS
async-nats = { version = "0.38", optional = true }
futures-util = { version = "0.3", optional = true }

# Async runtime
tokio = { version = "1", features = ["time", "sync"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
