[package]
name = "buswatch-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Matthew Hounslow"]
description = "Instrumentation SDK for emitting message bus metrics to buswatch"
license = "Apache-2.0"
repository = "https://github.com/lowhung/buswatch"
documentation = "https://docs.rs/buswatch-sdk"
readme = "README.md"
keywords = ["message-bus", "observability", "monitoring", "instrumentation", "metrics"]
categories = ["development-tools::debugging", "development-tools::profiling"]

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "tokio"]
prometheus = ["tokio", "dep:hyper", "dep:hyper-util", "dep:http-body-util"]

[dependencies]
buswatch-types = { path = "../buswatch-types", features = ["serde"] }
serde_json = "1"
parking_lot = "0.12"

# Async runtime (optional, for background emission)
tokio = { version = "1", features = ["time", "sync", "rt", "io-util", "net", "fs", "macros"], optional = true }

# OpenTelemetry (optional, for OTLP export)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["metrics", "http-proto", "reqwest-blocking-client"], optional = true }

# Prometheus HTTP server (optional)
hyper = { version = "1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "record_operations"
harness = false

[[bench]]
name = "snapshot_collection"
harness = false

[[bench]]
name = "concurrent_throughput"
harness = false

[[bench]]
name = "serialization"
harness = false
